removed todo, mvn surefire fix